<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="Login"
        android:textSize="100px"
      android:id="@+id/textv"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textv"
        android:inputType="textPersonName"
        android:hint="login"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="hasło"
        android:textSize="100px"
        app:layout_constraintBottom_toTopOf="@id/editTextTextPersonName4"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextTextPersonName3" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        android:ems="10"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="textPersonName"
        android:hint="haslo" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editTextTextPersonName4"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        android:text="Button" />

    <TextView
        app:layout_constraintTop_toBottomOf="@id/button2"
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="TextView" />

    <TextView
        android:id="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        android:visibility="invisible"
        android:text="TextView" />

</androidx.constraintlayout.widget.ConstraintLayout>